basic wireframe of desktop made

--- a/builds/index.html
+++ b/builds/index.html
@@ -22,6 +22,118 @@
 
 </div>
 
+<div id="clientGray">
+<div id="missionDiv">
+
+  <div class="bizInt">
+    <div class="icon-left">
+    <img src="./assets/icons/icon-bi.svg" onerror="this.src='./assets/icons/icon-bi.png'">
+    </div>
+    <div class="missionHead">
+    Business Intelligence</div>
+
+    <div class="missionBody">We use technology to turn data into knowledge that can help you manage and monitor your business from anywhere.</div>
+    </div>
+
+    <div class="bizInt">
+        <div class="icon-left">
+    <img src="./assets/icons/icon-appdev.svg" onerror="this.src='your.png'">
+    </div>
+    <div class="missionHead">App Development</div>
+    <div class="missionBody">Our mobile specialists work to create rich, easy to use consumer or enterprise experiences for iOS, Android.</div>
+    </div>
+
+
+    <div class="bizInt">
+        <div class="icon-left">
+      <img src="./assets/icons/icon-ba.svg" onerror="this.src='your.png'">
+    </div>
+      <div class="missionHead">Business Analysis</div>
+    <div class="missionBody">Great Strategy begins with listening. We learn about businesses from the inside out and then propose improvements</div>
+    </div>
+</div>
+</div>
+
+<div id="clientWhite">
+
+<div class="ourClient">
+<div class="clientHead">
+Our Clients
+</div>
+<div class="clientBody">
+  Over the years our team has had the distinction of working with variety of brands in different industries. Here is a short list of some of the names we have worked with.
+</div>
+</div>
+
+<div class="clientBox">
+<div class="clientImage">
+    <img src="./assets/logos/logo-fifththird.png">
+</div>
+</div>
+<div class="clientBox">
+<div class="clientImage">
+    <img src="./assets/logos/logo-chhn.png">
+</div>
+</div>
+<div class="clientBox">
+<div class="clientImage">
+    <img src="./assets/logos/logo-chs.png">
+</div>
+</div>
+<div class="clientBox">
+<div class="clientImage">
+    <img src="./assets/logos/logo-skanska.png">
+</div>
+</div>
+<div class="clientBox">
+<div class="clientImage">
+    <img src="./assets/logos/logo-rackroom.png">
+</div>
+</div>
+<div class="clientBox">
+<div class="clientImage">
+    <img src="./assets/logos/logo-png.png">
+</div>
+</div>
+</div>
+
+<div class="gojo">
+
+<div class="picgojo">
+<img src="./assets/images/pic-gojo.png">
+
+</div>
+<div class="textGojo">
+
+</div>
+
+
+
+</div>
+
+<div class="fifthCont">
+
+</div>
+
+<div class="chhnCont">
+
+  <div class="chhnLogo">
+    <img src="./assets/images/pic-chhn.png">
+  </div>
+
+
+</div>
+
+<footer>
+    <div class="footCard">© 2018 Cardinal Solutions. All rights reserved.
+<div class="icons">
+      <img src="./assets/icons/icon-twitter.svg" onerror="this.src='./assets/icons/icon-bi.png'">
+        <img src="./assets/icons/icon-facebook.svg" onerror="this.src='./assets/icons/icon-bi.png'">
+        <img src="./assets/icons/icon-g+.svg" onerror="this.src='./assets/icons/icon-bi.png'">
+    </div>
+  </div>
+  </footer>
+
 
 
 
