--- a/builds/index.html
+++ b/builds/index.html
@@ -21,7 +21,7 @@
 </div>
           </div>
 </div>
-<!-- Gray area of  -->
+<!-- Gray area of Client Container -->
 
 <div id="clientGray">
 <div id="missionDiv">
@@ -53,7 +53,7 @@
     <div class="missionBody">Great Strategy begins with listening. We learn about businesses from the inside out and then propose improvements</div>
     </div>
 </div>
-</div>
+
 
 <div id="clientWhite">
 
@@ -68,33 +68,34 @@
         </div>  
 
 <div class="clientBox">
-<div class="clientImage">
-    <img src="./assets/logos/logo-fifththird.png" alt="fifth-third bank logo">
+<div class="clientImage" id="fifthLogo">
+    <img src="./assets/logos/logo-fifththird.png" id="fifthLogo" alt="fifth-third bank logo">
 </div>
 </div>
 <div class="clientBox">
-<div class="clientImage">
+<div class="clientImage" id="chhnLogo">
     <img src="./assets/logos/logo-chhn.png" alt="Christ Hospital Health Network logo">
 </div>
 </div>
 <div class="clientBox">
-<div class="clientImage">
+<div class="clientImage" id="chsLogo">
     <img src="./assets/logos/logo-chs.png" alt="Carolinas Healthcare System logo">
 </div>
 </div>
 <div class="clientBox">
-<div class="clientImage">
+<div class="clientImage" id="skanskaLogo">
     <img src="./assets/logos/logo-skanska.png" alt="Skanska symbol">
 </div>
 </div>
 <div class="clientBox">
-<div class="clientImage">
+<div class="clientImage" id="rackLogo">
     <img src="./assets/logos/logo-rackroom.png" alt="Rack room shoes logo">
 </div>
 </div>
 <div class="clientBox">
-<div class="clientImage">
+<div class="clientImage" id="pngLogo">
     <img src="./assets/logos/logo-png.png" alt="Proctor and Gamble logo">
+</div>
 </div>
 </div>
 </div>
@@ -151,7 +152,7 @@
           <span>user rather than the technology</span>
         <br>  
         </div>
-          <input type="button" value="View App">
+          <input id="fifthButton" type="button" value="View App">
           
           </div>
 </div>
@@ -183,6 +184,8 @@
 
 
 </div>
+
+<!-- Connect with us container -->
 
 <div class="connect">
 
@@ -225,7 +228,7 @@
           </div>
         </form>
       </div>
-
+     
 <div class="contact">
 
 <div class="inquiries">
@@ -243,17 +246,17 @@ For inquiries, please contact:
 <br>
 <div class="stopby">
   Come by our office
-
+<div class="lowerContact">
   <span>222S.Church St. Suite 500.</span>
-  <br><br>
+  <br>
   <span>Chatlotte, NC 28202</span>
 </div> 
-
+</div>
 </div>
 
 
         <div id="map"></div>
-        <div>Find Parking on our map!</div>
+        <div class="findParking"><a href="https://google.com">Find Parking on our map!</a></div>
 </div>
 
 <div id="connected"></div>
@@ -261,9 +264,9 @@ For inquiries, please contact:
 <div id="footer">
     <div class="footCard">© 2018 Cardinal Solutions. All rights reserved.
 <div class="icons">
-      <img src="./assets/icons/icon-twitter.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="twitter icon">
-        <img src="./assets/icons/icon-facebook.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="facebook icon">
-        <img src="./assets/icons/icon-g+.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="google plus icon">
+      <img class="socialTags" src="./assets/icons/icon-twitter.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="twitter icon">
+        <img class="socialTags" src="./assets/icons/icon-facebook.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="facebook icon">
+        <img class="socialTags" src="./assets/icons/icon-g+.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="google plus icon">
     </div>
   </div>
 </div>
