--- a/builds/index.html
+++ b/builds/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cardinal Solutions</title>
+  <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.ico"/>
   <link rel="stylesheet" href="css/style.css">
 </head>
   <body>
