icon changes to media query effected page

--- a/builds/index.html
+++ b/builds/index.html
@@ -251,7 +251,7 @@
 
     <div id="map"></div>
     <div class="findParking">
-      <a href="https://google.com">Find Parking on our map!</a>
+      <a href="https://www.cardinalsolutions.com/contact/charlotte" target="_blank">Find Parking on our map!</a>
     </div>
   </div>
 
