--- a/builds/index.html
+++ b/builds/index.html
@@ -161,6 +161,8 @@
 
     <div class="chhnLogo">
       <img id="chhnImg" src="./assets/images/pic-chhn.png" alt="Christ Hospital Health Network application displayed on computer tablet and mobile devices image">
+      </div>
+      
       <div class="chhnHead">The Christ Hospital
         <br> Health Network
         <div class="chhnSecond">Digital Platform</div>
