--- a/builds/index.html
+++ b/builds/index.html
@@ -123,7 +123,7 @@
 
         <br>
       </div>
-      <input type="submit" value="Learn More">
+      <input type="submit" onclick="gojoClick()" value="Learn More">
     </div>
   </div>
 
@@ -149,7 +149,7 @@
         <span>user rather than the technology</span>
         <br>
       </div>
-      <input id="fifthButton" type="button" value="View App">
+      <input id="fifthButton" onclick="fifthClick()" type="button" value="View App">
 
     </div>
   </div>
@@ -176,7 +176,7 @@
 
         <br>
       </div>
-      <input type="button" value="Learn More">
+      <input type="button" onclick="chhnClick()" value="Learn More">
 
     </div>
   </div>
@@ -219,7 +219,7 @@
         <div class="col-25">
         </div>
         <div class="col-75">
-          <input type="submit" value="Submit">
+          <input type="submit" onclick="clear()" value="Submit">
         </div>
       </div>
     </form>
