--- a/builds/index.html
+++ b/builds/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -182,7 +181,7 @@
   </div>
 
   <!-- Connect with us container -->
-
+<div class=connectContainer>
   <div class="connect">
 
     <div class="row">
@@ -219,12 +218,12 @@
         <div class="col-25">
         </div>
         <div class="col-75">
-          <input type="submit" onclick="clear()" value="Submit">
+          <input type="submit" onclick="clear()">
         </div>
       </div>
     </form>
   </div>
-
+  <div class="line"></div>
   <div class="contact">
 
     <div class="inquiries">
@@ -257,7 +256,7 @@
     </div>
   </div>
 
-  <div id="connected"></div>
+</div>
 
   <div id="footer">
     <div class="footCard">© 2018 Cardinal Solutions. All rights reserved.
@@ -268,6 +267,7 @@
       </div>
     </div>
   </div>
+
 
 
 
