improved load time with lazy loading of below the fold images

--- a/builds/index.html
+++ b/builds/index.html
@@ -71,32 +71,32 @@
 
       <div class="clientBox">
         <div class="clientImage">
-          <img src="./assets/logos/logo-fifththird.png" id="fifthLogo" alt="fifth-third bank logo">
+          <img src="./assets/images/spinner.gif" data-src="./assets/logos/logo-fifththird.png" id="fifthLogo" alt="fifth-third bank logo">
         </div>
       </div>
       <div class="clientBox">
         <div class="clientImage">
-          <img src="./assets/logos/logo-chhn.png" id="chhnLogo" alt="Christ Hospital Health Network logo">
+          <img src="./assets/images/spinner.gif" data-src="./assets/logos/logo-chhn.png" id="chhnLogo" alt="Christ Hospital Health Network logo">
         </div>
       </div>
       <div class="clientBox">
         <div class="clientImage">
-          <img src="./assets/logos/logo-chs.png" id="chsLogo" alt="Carolinas Healthcare System logo">
+          <img src="./assets/images/spinner.gif" data-src="./assets/logos/logo-chs.png" id="chsLogo" alt="Carolinas Healthcare System logo">
         </div>
       </div>
       <div class="clientBox">
         <div class="clientImage">
-          <img src="./assets/logos/logo-skanska.png" id="skanskaLogo" alt="Skanska symbol">
+          <img src="./assets/images/spinner.gif" data-src="./assets/logos/logo-skanska.png" id="skanskaLogo" alt="Skanska symbol">
         </div>
       </div>
       <div class="clientBox">
         <div class="clientImage">
-          <img src="./assets/logos/logo-rackroom.png" id="rackLogo" alt="Rack room shoes logo">
+          <img src="./assets/images/spinner.gif" data-src="./assets/logos/logo-rackroom.png" id="rackLogo" alt="Rack room shoes logo">
         </div>
       </div>
       <div class="clientBox">
         <div class="clientImage">
-          <img src="./assets/logos/logo-png.png" id="pngLogo" alt="Proctor and Gamble logo">
+          <img src="./assets/images/spinner.gif" data-src="./assets/logos/logo-png.png" id="pngLogo" alt="Proctor and Gamble logo">
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
 
   <div class="gojo">
     <div class="picgojo">
-      <img src="./assets/images/pic-gojo.png" alt="Gojo hand sanitizer dispenser image with cell phone">
+      <img src="./assets/images/spinner.gif" data-src="./assets/images/pic-gojo.png" alt="Gojo hand sanitizer dispenser image with cell phone">
     </div>
 
     <div class="gojoText">
@@ -131,7 +131,7 @@
   <div class="fifthCont">
 
     <div class="phoneImg">
-      <img src="./assets/images/pic-fifththird.png" alt="fifth third banking application on smartphone image">
+      <img src="./assets/images/spinner.gif" data-src="./assets/images/pic-fifththird.png" alt="fifth third banking application on smartphone image">
     </div>
 
     <div class="fifthText">
@@ -159,7 +159,7 @@
   <div class="chhnCont">
 
     <div class="chhnLogo">
-      <img id="chhnImg" src="./assets/images/pic-chhn.png" alt="Christ Hospital Health Network application displayed on computer tablet and mobile devices image">
+      <img id="chhnImg" src="./assets/images/spinner.gif" data-src="./assets/images/pic-chhn.png" alt="Christ Hospital Health Network application displayed on computer tablet and mobile devices image">
       </div>
       
       <div class="chhnHead">The Christ Hospital
@@ -261,9 +261,9 @@
   <div id="footer">
     <div class="footCard">© 2018 Cardinal Solutions. All rights reserved.
       <div class="icons">
-        <img class="socialTags" src="./assets/icons/icon-twitter.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="twitter icon">
-        <img class="socialTags" src="./assets/icons/icon-facebook.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="facebook icon">
-        <img class="socialTags" src="./assets/icons/icon-g+.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="google plus icon">
+        <img class="socialTags" src="./assets/images/spinner.gif" data-src="./assets/icons/icon-twitter.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="twitter icon">
+        <img class="socialTags" src="./assets/images/spinner.gif" data-src="./assets/icons/icon-facebook.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="facebook icon">
+        <img class="socialTags" src="./assets/images/spinner.gif" data-src="./assets/icons/icon-g+.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="google plus icon">
       </div>
     </div>
   </div>
