--- a/builds/index.html
+++ b/builds/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cardinal Solutions</title>
   <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.ico" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -106,7 +106,7 @@
 
   <div class="gojo">
     <div class="picgojo">
-      <img src="./assets/images/spinner.gif" data-src="./assets/images/pic-gojo.png" alt="Gojo hand sanitizer dispenser image with cell phone">
+      <img src="./assets/images/spinner.gif" data-src="./assets/images/pic-gojo-min.png" alt="Gojo hand sanitizer dispenser image with cell phone">
     </div>
 
     <div class="gojoText">
@@ -131,7 +131,7 @@
   <div class="fifthCont">
 
     <div class="phoneImg">
-      <img src="./assets/images/spinner.gif" data-src="./assets/images/pic-fifththird.png" alt="fifth third banking application on smartphone image">
+      <img src="./assets/images/spinner.gif" data-src="./assets/images/pic-fifththird-min.png" alt="fifth third banking application on smartphone image">
     </div>
 
     <div class="fifthText">
@@ -159,7 +159,7 @@
   <div class="chhnCont">
 
     <div class="chhnLogo">
-      <img id="chhnImg" src="./assets/images/spinner.gif" data-src="./assets/images/pic-chhn.png" alt="Christ Hospital Health Network application displayed on computer tablet and mobile devices image">
+      <img id="chhnImg" src="./assets/images/spinner.gif" data-src="./assets/images/pic-chhn-min.png" alt="Christ Hospital Health Network application displayed on computer tablet and mobile devices image">
       </div>
       
       <div class="chhnHead">The Christ Hospital
@@ -274,7 +274,7 @@
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3OCGB-0aKZqu3bwSBaHCmNnvakMGbZ3M&callback=initMap">
   </script>
-  <script src="js/script.js"></script>
+  <script async src="js/script.js"></script>
 </body>
 
 </html>
