fixing small breakpoints added links to social icons

--- a/builds/index.html
+++ b/builds/index.html
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="clientBox">
-        <div class="clientImage">
+        <div class="clientImage" id="rackimage">
           <img src="./assets/images/spinner.gif" data-src="./assets/logos/logo-rackroom.png" id="rackLogo" alt="Rack room shoes logo">
         </div>
       </div>
@@ -261,9 +261,9 @@
   <div id="footer">
     <div class="footCard">© 2018 Cardinal Solutions. All rights reserved.
       <div class="icons">
-        <img class="socialTags" src="./assets/images/spinner.gif" data-src="./assets/icons/icon-twitter.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="twitter icon">
-        <img class="socialTags" src="./assets/images/spinner.gif" data-src="./assets/icons/icon-facebook.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="facebook icon">
-        <img class="socialTags" src="./assets/images/spinner.gif" data-src="./assets/icons/icon-g+.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="google plus icon">
+       <a href="https://twitter.com/CardinalNow" target="_blank"> <img class="socialTags" src="./assets/images/spinner.gif" data-src="./assets/icons/icon-twitter.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="twitter icon"></a>
+       <a href="https://www.facebook.com/cardinalsolutions/" target="_blank">  <img class="socialTags" src="./assets/images/spinner.gif" data-src="./assets/icons/icon-facebook.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="facebook icon"></a>
+        <a href="google.com" target="_blank"><img class="socialTags" src="./assets/images/spinner.gif" data-src="./assets/icons/icon-g+.svg" onerror="this.src='./assets/icons/icon-bi.png'" alt="google plus icon"></a>
       </div>
     </div>
   </div>
